--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.3",
+    "@mui/x-data-grid": "^5.15.1",
     "chart.js": "^3.9.1",
     "chartkick": "^4.2.0",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
+    "react-calendar": "^3.7.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
+    "react-table": "^7.8.0",
     "recharts": "^2.1.13"
   },
   "devDependencies": {
